--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -1,10 +1,16 @@
-.webstudio {
+.logo {
     font-family: 'Raleway', sans-serif;
     letter-spacing: 0.03em;
     font-size: 26px;
     line-height: 31px;
-    color: $black;
-    padding: 24px 0;
+    display: block;
+    color: $blu;
     margin-right: 93px;
     text-decoration: none;
+    &__footer {
+            color: $white;
+        }
+    &__header {
+            color: $black;
+        }
 }
