--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,12 +7,12 @@
 @import './components/button-porfolio';
 @import './components/clients';
 @import './components/container';
+@import './components/direction';
 @import './components/footer';
 @import './components/header';
 @import './components/join';
 @import './components/logo';
 @import './components/project-porfolio';
-@import './components/sections';
 @import './components/subscription';
 @import './components/team';
 @import './components/work';
