--- a/scss/components/_backdrop.scss
+++ b/scss/components/_backdrop.scss
@@ -80,68 +80,70 @@
     line-height: 14px;
     letter-spacing: 0.01em;
     color: $gray;
-}
-
-.modal-text {
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 23px;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    letter-spacing: 0.03em;
-    color: $main-color;
-    margin-bottom: 12px;
-}
-
-.checkbox__contract{
-    color: $blu;
-    margin-left: 5px;
-    text-decoration: underline;
-}
-
-.modal-label {
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    align-items: flex-start;
-    cursor: pointer;
-    font-size: 12px;
-    line-height: 14px;
-    letter-spacing: 0.01em;
-    color: $gray;
-    margin-bottom: 10px;
-}
-
-.modal-input-wrapper {
-    position: relative;
-    display: flex;
-    width: 100%;
-    margin-top: 4px;
-    font-size: 14px;
-    line-height: 24px;
-    letter-spacing: 0.03em;
-    color: $gray;
-}
-
-.modal-input-wrapper-checkbox {
-    width: 0;
-}
-
-.modal-input {
-    width: 100%;
-    height: 40px;
-    cursor: pointer;
-    outline: none;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: $borderRadius;
-    padding-left: 42px;
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:focus{
-        border: 1px solid $darkBlu;
-        border-radius: $borderRadius;
-    }
+    .modal-text {
+            font-weight: 700;
+            font-size: 20px;
+            line-height: 23px;
+            display: flex;
+            justify-content: center;
+            text-align: center;
+            align-items: center;
+            letter-spacing: 0.03em;
+            color: $main-color;
+            margin-bottom: 12px;
+        }
+    
+    
+    
+        .modal-label {
+            display: flex;
+            flex-direction: column;
+            text-align: left;
+            align-items: flex-start;
+            cursor: pointer;
+            font-size: 12px;
+            line-height: 14px;
+            letter-spacing: 0.01em;
+            color: $gray;
+            margin-bottom: 10px;
+    
+            .modal-input-wrapper {
+                position: relative;
+                display: flex;
+                width: 100%;
+                margin-top: 4px;
+                font-size: 14px;
+                line-height: 24px;
+                letter-spacing: 0.03em;
+                color: $gray;
+    
+                .modal-input {
+                    width: 100%;
+                    height: 40px;
+                    cursor: pointer;
+                    outline: none;
+                    border: 1px solid rgba(33, 33, 33, 0.2);
+                    border-radius: $borderRadius;
+                    padding-left: 42px;
+                    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+                    &:focus {
+                        border: 1px solid $darkBlu;
+                        border-radius: $borderRadius;
+                    }
+    
+                    &:focus-within {
+                        border: 1px solid $darkBlu;
+                        border-radius: $borderRadius;
+                    }
+    
+    
+                    &:focus~.modal-icon {
+                        fill: $darkBlu;
+                    }
+                }
+            }
+        }
 }
 
 .modal-icon {
@@ -151,16 +153,6 @@
     cursor: pointer;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-input:focus-within {
-    border: 1px solid $darkBlu;
-    border-radius: $borderRadius;
-}
-
-
-.modal-input:focus~.modal-icon {
-    fill: $darkBlu;
 }
 
 .checkbox {
@@ -173,30 +165,35 @@
     cursor: pointer;
     font-size: 14px;
     line-height: 24px;
-}
-
-.checkbox-input {
-    appearance: none;
-    -webkit-appearance: none;
-    position: absolute;
-}
-
-.checkbox-custom-box {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 16px;
-    height: 15px;
-    margin-right: 8px;
-    border: 1.5px solid $main-color;
-    border-radius: calc($borderRadius/2);
-    cursor: pointer;
-    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.checkbox-input:checked+.checkbox-custom-box {
-    background: $blu;
-    border-color: transparent;
+    &__contract {
+            color: $blu;
+            margin-left: 5px;
+            text-decoration: underline;
+        }
+        .modal-input-wrapper-checkbox {
+            width: 0;
+        }
+        .checkbox-input {
+            appearance: none;
+            -webkit-appearance: none;
+            position: absolute;
+        }
+        .checkbox-custom-box {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 16px;
+            height: 15px;
+            margin-right: 8px;
+            border: 1.5px solid $main-color;
+            border-radius: calc($borderRadius/2);
+            cursor: pointer;
+            transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+        .checkbox-input:checked+.checkbox-custom-box {
+            background: $blu;
+            border-color: transparent;
+        }
 }
 
 .modal-form-button {
@@ -212,14 +209,12 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    cursor: pointer;
     letter-spacing: 0.06em;
     color: $white;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     margin: auto;
     margin-top: 30px;
     transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
     &:hover,
     &:focus {
     background: $modal-buttom-blu;
