--- a/scss/components/_bisnes.scss
+++ b/scss/components/_bisnes.scss
@@ -10,8 +10,7 @@
     margin-right: auto;
     outline: 1px solid $main-color;
     padding: 200px 0;
-    margin: 0 auto 30px;
-    padding: 94px 0px;
+    padding: 200px 0px;
     &__title {
             font-weight: 900;
             font-size: 40px;
@@ -21,7 +20,7 @@
             text-transform: uppercase;
             color: $white;
             max-width: 696px;
-            margin: auto;
+            margin: 0 auto 30px;
         }
     
     &__button {
@@ -30,8 +29,6 @@
             height: 50px;
             border-radius: $borderRadius;
             border: none;
-            cursor: pointer;
-            margin-top: 30px;
             font-weight: 700;
             font-size: 16px;
             line-height: 30px;
@@ -41,18 +38,18 @@
             text-align: center;
             letter-spacing: 0.06em;
             color: $white;
-            font-family: inherit;
             transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
             &:hover {
                 background-color: $modal-buttom-blu;
             }
     }
+        & .container {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            justify-content: center;
+        }
 }
 
-.bisnes .container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-}
+
