--- a/scss/components/_button-porfolio.scss
+++ b/scss/components/_button-porfolio.scss
@@ -1,60 +1,59 @@
-.buttons {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    text-align: center;
-    align-items: center;
+.direction {
+    padding: 94px 0px;
+    .direction-button {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            text-align: center;
+            align-items: center;
+    
+            &__button {
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 26px;
+                text-align: center;
+                letter-spacing: 0.03em;
+                color: $main-color;
+                margin: 4px;
+                border: none;
+                border-radius: $borderRadius;
+                transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+                &:hover,
+                &:focus {
+                    background-color: $blu;
+                    color: $white;
+                    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+                    border-radius: $borderRadius;
+                }
+            }
+    
+            .button1 {
+                width: 73px;
+                padding: 6px 22px;
+            }
+    
+            .button2 {
+                width: 125px;
+                padding: 6px 22px;
+            }
+    
+            .button3 {
+                width: 112px;
+                padding: 6px 22px;
+            }
+    
+            .button4 {
+                width: 103px;
+                padding: 6px 22px;
+            }
+    
+            .button5 {
+                width: 130px;
+                padding: 6px 22px;
+            }
+        }
 }
 
-.buttonp {
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 26px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: $main-color;
-    margin: 4px;
-    border: none;
-    border-radius: $borderRadius;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-        background-color: $blu;
-        color: $white;
-        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-        border-radius: $borderRadius;
-    }
-}
 
-.button1 {
-    width: 73px;
-    padding: 6px 22px;
-    cursor: pointer;
-
-}
-
-.button2 {
-    width: 125px;
-    padding: 6px 22px;
-    cursor: pointer;
-}
-
-.button3 {
-    width: 112px;
-    padding: 6px 22px;
-    cursor: pointer;
-}
-
-.button4 {
-    width: 103px;
-    padding: 6px 22px;
-    cursor: pointer;
-}
-
-.button5 {
-    width: 130px;
-    padding: 6px 22px;
-    cursor: pointer;
-}
 
