--- a/scss/components/_project-porfolio.scss
+++ b/scss/components/_project-porfolio.scss
@@ -3,21 +3,36 @@
     flex-wrap: wrap;
     padding: 50px 0px 0px 0px;
     text-align: left;
+    & h2 {
+            font-weight: 700;
+            font-size: 18px;
+            line-height: 36px;
+            letter-spacing: 0.06em;
+            color: $main-color;
+            line-height: 2.25em;
+        }
+    
+    & p {
+            font-size: 16px;
+            line-height: 30px;
+            letter-spacing: 0.03em;
+            color: $gray;
+        }
 }
 
 .project {
     max-width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
+    &:nth-child(3n) {
+            margin-right: 0px;
+        }
+    
+    &:nth-last-child(-n+3) {
+            margin-bottom: 0px;
+        }
 }
 
-.project:nth-child(3n) {
-    margin-right: 0px;
-}
-
-.project:nth-last-child(-n+3) {
-    margin-bottom: 0px;
-}
 
 .project-link {
     display: block;
@@ -27,22 +42,11 @@
     position: relative;
     overflow: hidden;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.project-list h2 {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 36px;
-    letter-spacing: 0.06em;
-    color: $main-color;
-    line-height: 2.25em;
-}
-
-.project-list p {
-    font-size: 16px;
-    line-height: 30px;
-    letter-spacing: 0.03em;
-    color: $gray;
+    &:hover .overlay,
+    &:focus .overlay {
+            color: $white;
+            transform: translateY(0%);
+        }
 }
 
 .textmaker {
@@ -50,11 +54,7 @@
     padding: 24px 20px;
 }
 
-.project-link:hover .overlay,
-.project-link:focus .overlay {
-    color: $white;
-    transform: translateY(0%);
-}
+
 
 .overlay {
     position: absolute;
