--- a/scss/components/_subscription.scss
+++ b/scss/components/_subscription.scss
@@ -4,64 +4,66 @@
     display: flex;
     flex-direction: column;
     margin-left: 93px;
+    & h2 {
+            font-weight: 700;
+            font-size: 14px;
+            line-height: 16px;
+            letter-spacing: 0.03em;
+            text-transform: uppercase;
+            color: $white;
+            margin-bottom: 20px;
+        }
+        &__footer-form {
+            display: flex;
+        }
+    
+        &__input {
+            width: 358px;
+            height: 50px;
+            font-size: 16px;
+            line-height: 20px;
+            padding-left: 16px;
+            display: flex;
+            align-items: center;
+            letter-spacing: 0.03em;
+            color: rgba(255, 255, 255, 0.6);
+            background-color: $footerBG;
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+            border-radius: $borderRadius;
+        }
+    
+        &__button {
+            width: 200px;
+            height: 50px;
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            letter-spacing: 0.06em;
+            color: $white;
+            background: #2196F3;
+            fill: var(--white);
+            margin-left: 12px;
+            border-radius: $borderRadius;
+            border: none;
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+            &:hover,
+            &:focus {
+                background-color: $modal-buttom-blu;
+            }
+        }
+    
+        &__button-submit {
+            margin-left: 10px;
+        }
 }
 
-.subscription h2 {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: $white;
-    margin-bottom: 20px;
-}
 
-.subscription__footer-form {
-    display: flex;
-}
 
-.subscription__input {
-    width: 358px;
-    height: 50px;
-    font-size: 16px;
-    line-height: 20px;
-    padding-left: 16px;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
-    background-color: $footerBG;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: $borderRadius;
-}
 
-.subscription__button {
-    width: 200px;
-    height: 50px;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    cursor: pointer;
-    letter-spacing: 0.06em;
-    color: $white;
-    background: #2196F3;
-    fill: var(--white);
-    margin-left: 12px;
-    border-radius: $borderRadius;
-    border: none;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-        background-color: $modal-buttom-blu;
-    }
-}
-
-.subscription__button-submit {
-    margin-left: 10px;
-}
 
