--- a/scss/components/_team.scss
+++ b/scss/components/_team.scss
@@ -1,79 +1,78 @@
 .team {
     background-color: $benefitsBG;
     padding: 94px 0px;
-}
-.team-name {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 42px;
-    margin: 0px;
-    padding-bottom: 50px;
-    display: flex;
-    justify-content: center;
-}
-.team-gallery {
-    justify-content: space-between;
-    display: flex;
-    &__item {
-        width: 270px;
-        background: $white;
-        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-        border-radius: 0px 0px 4px 4px;
-        font-size: 16px;
-        line-height: 19px;
-        display: block;
+    .team-list {
+        justify-content: space-between;
+        display: flex;
+    }
+    .employee {
+            width: 270px;
+            background: $white;
+            box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+            border-radius: 0px 0px 4px 4px;
+            font-size: 16px;
+            line-height: 19px;
+            display: block;
+        &-box {
+            padding: 30px;
+    
+            &__direction {
+                font-size: 16px;
+                line-height: 19px;
+                text-align: center;
+                letter-spacing: 0.03em;
+                color: $gray;
+            }
+    
+            &__name {
+                color: $main-color;
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 19px;
+                text-align: center;
+                letter-spacing: 0.03em;
+                margin-bottom: 10px;
+            }
+    
+            &__social {
+                display: flex;
+                justify-content: center;
+                margin-top: 16px;
+    
+            }
+    
+            &__item {
+                margin-right: 10px;
+            }
+    
+            &__link {
+                height: 44px;
+                width: 44px;
+                display: flex;
+                align-content: center;
+                justify-content: space-around;
+                align-items: center;
+                border-radius: 44px;
+                background: rgba(255, 255, 255, 0.1);
+                margin: 0px;
+                padding: 0px;
+                fill: $grayBlu;
+                transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+                &:hover,
+                &:focus {
+                    background-color: $blu;
+                    fill: $white;
+                }
+            }
+    
+            &__icon {
+                height: 20px;
+                width: 20px;
+            }
+        }
     }
 }
 
-.team-box {
-    padding: 30px;
-    &__direction{
-            font-size: 16px;
-            line-height: 19px;
-            text-align: center;
-            letter-spacing: 0.03em;
-            color: $gray;
-        }
-    &__name {
-        color: $main-color;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 19px;
-        text-align: center;
-        letter-spacing: 0.03em;
-        margin-bottom: 10px;
-    }
-    &__social {
-        display: flex;
-        justify-content: center;
-        margin-top: 16px;
-    
-    }
-    &__item {
-        margin-right: 10px;
-    }
-    &__link {
-        height: 44px;
-        width: 44px;
-        display: flex;
-        align-content: center;
-        justify-content: space-around;
-        align-items: center;
-        border-radius: 44px;
-        background: rgba(255, 255, 255, 0.1);
-        margin: 0px;
-        padding: 0px;
-        fill: $grayBlu;
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-        &:hover,
-        &:focus {
-            background-color: $blu;
-            fill: $white;
-        }
-    }
-    &__icon {
-        height: 20px;
-        width: 20px;
-    }
-}
+
+
