--- a/scss/utils/_base.scss
+++ b/scss/utils/_base.scss
@@ -7,6 +7,7 @@ body {
     text-decoration: none;
     background-color: $white;
     color: $main-color;
+    text-decoration: none;
 }
 
 * {
@@ -14,7 +15,10 @@ body {
     padding: 0px;
     box-sizing: border-box;
 }
-
+button{
+    cursor: pointer;
+    font-family: inherit;
+}
 img {
     display: block;
     max-width: 100%;
@@ -23,4 +27,19 @@ img {
 
 ul {
     list-style-type: none;
+}
+li,a{
+    text-decoration: none;
+}
+.title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: $main-color;
+    margin-bottom: 50px;
+}
+.section {
+    padding: 94px 0px;
 }
