--- a/css/main.css
+++ b/css/main.css
@@ -800,20 +800,6 @@ li, a {
   padding: 50px 0px 0px 0px;
   text-align: left;
 }
-.project-list h2 {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 36px;
-  letter-spacing: 0.06em;
-  color: #212121;
-  line-height: 2.25em;
-}
-.project-list p {
-  font-size: 16px;
-  line-height: 30px;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
 
 .project {
   max-width: 370px;
@@ -826,8 +812,7 @@ li, a {
 .project:nth-last-child(-n+3) {
   margin-bottom: 0px;
 }
-
-.project-link {
+.project__link {
   display: block;
   border: 1px solid #eee;
   background-color: #fff;
@@ -840,18 +825,16 @@ li, a {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.project-link:hover .overlay, .project-link:focus .overlay {
+.project__link:hover .project__overlay, .project__link:focus .project__overlay {
   color: #fff;
   -webkit-transform: translateY(0%);
           transform: translateY(0%);
 }
-
-.textmaker {
-  width: 320px;
-  padding: 24px 20px;
+.project__image-container {
+  position: relative;
+  overflow: hidden;
 }
-
-.overlay {
+.project__overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -879,10 +862,24 @@ li, a {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.hiding {
-  position: relative;
-  overflow: hidden;
+.project__text-container {
+  width: 320px;
+  margin: 24px 20px;
+}
+.project__title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 36px;
+  letter-spacing: 0.06em;
+  color: #212121;
+  line-height: 2.25em;
+  padding: 0;
+}
+.project__text {
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.03em;
+  color: #757575;
 }
 
 .subscription {
