--- a/scss/components/_project-porfolio.scss
+++ b/scss/components/_project-porfolio.scss
@@ -3,21 +3,7 @@
     flex-wrap: wrap;
     padding: 50px 0px 0px 0px;
     text-align: left;
-    & h2 {
-            font-weight: 700;
-            font-size: 18px;
-            line-height: 36px;
-            letter-spacing: 0.06em;
-            color: $main-color;
-            line-height: 2.25em;
-        }
     
-    & p {
-            font-size: 16px;
-            line-height: 30px;
-            letter-spacing: 0.03em;
-            color: $gray;
-        }
 }
 
 .project {
@@ -27,59 +13,79 @@
     &:nth-child(3n) {
             margin-right: 0px;
         }
-    
     &:nth-last-child(-n+3) {
             margin-bottom: 0px;
         }
-}
-
-
-.project-link {
-    display: block;
-    border: 1px solid $grayscale;
-    background-color: $white;
-    box-sizing: border-box;
-    position: relative;
-    overflow: hidden;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover .overlay,
-    &:focus .overlay {
-            color: $white;
-            transform: translateY(0%);
+    &__link {
+            display: block;
+            border: 1px solid $grayscale;
+            background-color: $white;
+            box-sizing: border-box;
+            position: relative;
+            overflow: hidden;
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+            &:hover .project__overlay,
+            &:focus .project__overlay {
+                color: $white;
+                transform: translateY(0%);
+            }
         }
+    &__image-container {
+            position: relative;
+            overflow: hidden;
+        }
+    &__overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            display: flex;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+            padding: 24px;
+            margin: 0;
+            box-sizing: border-box;
+            font-size: 18px;
+            line-height: 28px;
+            letter-spacing: 0.03em;
+            color: $white;
+            background: rgba(33, 150, 243, 0.9);
+            transform: translateY(101%);
+            transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+        &__text-container {
+            width: 320px;
+            margin: 24px 20px;
+                }
+        &__title {
+            font-weight: 700;
+            font-size: 18px;
+            line-height: 36px;
+            letter-spacing: 0.06em;
+            color: $main-color;
+            line-height: 2.25em;
+            padding: 0;
+        }
+        
+        &__text {
+            font-size: 16px;
+            line-height: 30px;
+            letter-spacing: 0.03em;
+            color: $gray;
+                }
 }
 
-.textmaker {
-    width: 320px;
-    padding: 24px 20px;
-}
 
 
 
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    padding: 24px;
-    margin: 0;
-    box-sizing: border-box;
-    font-size: 18px;
-    line-height: 28px;
-    letter-spacing: 0.03em;
-    color: $white;
-    background: rgba(33, 150, 243, 0.9);
-    transform: translateY(101%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.hiding {
-    position: relative;
-    overflow: hidden;
-}
+
+
+
+
+
+
 // .overLay:hover,
 // .overLay:focus {
 //     background-color: $white;
