--- a/css/main.css
+++ b/css/main.css
@@ -863,7 +863,7 @@ li, a {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .project__text-container {
-  margin: 24px 20px;
+  padding: 24px 20px;
 }
 .project__title {
   font-weight: 700;
