--- a/scss/components/_project-porfolio.scss
+++ b/scss/components/_project-porfolio.scss
@@ -55,7 +55,7 @@
             transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
         &__text-container {
-            margin: 24px 20px;
+            padding: 24px 20px;
                 }
         &__title {
             font-weight: 700;
