--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -2,6 +2,14 @@
     background-color: $footerBG;
     text-align: left;
     display: list-item;
+    &__title {
+            font-weight: 700;
+            font-size: 14px;
+            line-height: 16px;
+            letter-spacing: 0.03em;
+            text-transform: uppercase;
+            color: $white;
+        }
 }
 .footer .container{
     padding: 60px 0px;
