--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,7 @@
 @import './components/join';
 @import './components/logo';
 @import './components/project-porfolio';
+@import './components/socials';
 @import './components/subscription';
 @import './components/team';
 @import './components/work';
