--- a/scss/components/_backdrop.scss
+++ b/scss/components/_backdrop.scss
@@ -48,30 +48,7 @@
     &__textarea::placeholder {
             color: rgba(117, 117, 117, 0.5);
     }
-}
-
-.close {
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    right: 8px;
-    top: 8px;
-    background: $white;
-    background-image: url(../images/Vector.svg);
-    background-repeat: no-repeat;
-    background-size: 10px;
-    background-position: center;
-    border-radius: 50%;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-    transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-    &:focus,
-    &:hover {
-            background-image: url(../images/VectorBlu.svg);
-}
-}
-.modal-form {
+    .modal__form {
     display: block;
     width: 100%;
     height: 581px;
@@ -92,10 +69,7 @@
             color: $main-color;
             margin-bottom: 12px;
         }
-    
-    
-    
-        .modal-label {
+    .modal__label {
             display: flex;
             flex-direction: column;
             text-align: left;
@@ -107,7 +81,7 @@
             color: $gray;
             margin-bottom: 10px;
     
-            .modal-input-wrapper {
+            .modal__input-wrapper {
                 position: relative;
                 display: flex;
                 width: 100%;
@@ -146,7 +120,7 @@
         }
 }
 
-.modal-icon {
+.modal__icon {
     position: absolute;
     left: 12px;
     top: 50%;
@@ -154,6 +128,65 @@
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
+
+
+
+
+
+
+
+    &__form-button {
+            width: 200px;
+            height: 50px;
+            background: $darkBlu;
+            border-radius: $borderRadius;
+            border: none;
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            letter-spacing: 0.06em;
+            color: $white;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+            margin: auto;
+            margin-top: 30px;
+            transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+            &:hover,
+            &:focus {
+                background: $modal-buttom-blu;
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+            }
+        }
+}
+
+.close {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    right: 8px;
+    top: 8px;
+    background: $white;
+    background-image: url(../images/Vector.svg);
+    background-repeat: no-repeat;
+    background-size: 10px;
+    background-position: center;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+    &:focus,
+    &:hover {
+            background-image: url(../images/VectorBlu.svg);
+}
+}
+
 
 .checkbox {
     width: 400px;
@@ -196,28 +229,5 @@
         }
 }
 
-.modal-form-button {
-    width: 200px;
-    height: 50px;
-    background: $darkBlu;
-    border-radius: $borderRadius;
-    border: none;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.06em;
-    color: $white;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    margin: auto;
-    margin-top: 30px;
-    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-    background: $modal-buttom-blu;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}}
+
 
