--- a/scss/components/_clients.scss
+++ b/scss/components/_clients.scss
@@ -13,11 +13,12 @@
             border: 1px solid $grayBlu;
             border-radius: $borderRadius;
             fill: $grayBlu;
+            outline: none;
             transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
             &:hover,
             &:focus {
-                fill: var(--blu);
+                fill: $blu;
                 border: 1px solid $darkBlu;
             }
         }
