--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -7,10 +7,7 @@
     
         }
     
-        &__list :hover {
-            color: $blu;
-        }
-    
+
         &__item {
             text-decoration: none;
         }
@@ -22,6 +19,25 @@
             display: flex;
             justify-content: space-between;
             gap: 50px;
+            &-link {
+                    font-weight: 500;
+                    line-height: 16px;
+                    letter-spacing: 0.02em;
+                    color: $gray;
+                    text-decoration: none;
+                    display: flex;
+                    font-style: normal;
+                    align-items: center;
+                    padding: 32px 0px;
+                    fill: $gray;
+                    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            
+                    &:focus,
+                    &:hover {
+                        color: $blu;
+                        fill: $blu;
+                    }
+                }
         }
 }
 
@@ -51,23 +67,7 @@
     }
 }
 
-.header-contact {
-    font-weight: 500;
-    line-height: 16px;
-    letter-spacing: 0.02em;
-    color: $gray;
-    text-decoration: none;
-    display: flex;
-    font-style: normal;
-    align-items: center;
-    padding: 32px 0px;
-    fill: $gray;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:focus, &:hover{
-    color: $blu;
-    fill: $blu;
-    }
-}
+
 
 
 
