--- a/scss/components/_subscription.scss
+++ b/scss/components/_subscription.scss
@@ -4,16 +4,8 @@
     display: flex;
     flex-direction: column;
     margin-left: 93px;
-    & h2 {
-            font-weight: 700;
-            font-size: 14px;
-            line-height: 16px;
-            letter-spacing: 0.03em;
-            text-transform: uppercase;
-            color: $white;
-            margin-bottom: 20px;
-        }
         &__footer-form {
+            margin-top: 20px;
             display: flex;
         }
     
